# vplay

./: .gitignore  README.md  pyproject.toml
Formula/: vplay.rb
docs/: CNAME  index.html  llms.txt  modules.md  releases.md  robots.txt  sitemap.xml
fish/: vplay.fish
packaging/portable/: launcher.py
scripts/: build-portable-macos.sh
vplay/: __init__.py  __main__.py  app.py  commands.py  config.py  displays.py  downloads.py  media.py  models.py  mpv.py  state.py  updates.py
vplay/modules/: __init__.py  base.py  hooks.py  keymap.py  layout.py  registry.py
vplay/modules/system/: __init__.py  info.py  library.py  playlist.py  screens.py  theme.py
vplay/modules/user/: __init__.py  notes.py
vplay/mpv/: vplay.lua
vplay/ui/: __init__.py  screens.py
