[project]
name = "vplay"
version = "1.1.0b2"
description = "Advanced macOS CLI video player with a TUI interface."
requires-python = ">=3.9"
dependencies = ["textual>=0.50"]

[project.scripts]
vplay = "vplay.__main__:main"

[tool.setuptools.packages.find]
include = ["vplay*"]
exclude = ["docs*", "fish*", "mpv*"]

[tool.setuptools.package-data]
vplay = ["mpv/*.lua"]
